# fgetoptcc

./: .travis.yml  CMakeLists-ExternalProjects.txt  CMakeLists.txt  LICENSE  Makefile  README.md  astyle.sh
examples/: use_fgetopt_alias_c.c  use_fgetopt_alias_cpp.cc  use_fgetopt_c.c  use_fgetopt_cpp.cc
src/: fgetopt.c  fgetopt.h
tests/unittests/: argv.h  fgetopt_unittest.cc  fgetopt_unittest.cc.orig  test_kits.h
